--- a/style.css
+++ b/style.css
@@ -5,15 +5,21 @@
 }
 
 .container {
-    width: 200px;
+    width: 220px;
     margin: 50px auto;
 }
 
-/* header */
-
-
-
-/* list */
+.title {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+.title button {
+    width: 100%;
+    background-color: brown;
+    color:white;
+    border: none;
+}
 
 .list {
     list-style-type: none;
@@ -23,8 +29,25 @@
 .list li {
     display: flex;
     justify-content: space-between;
+    margin-top: 5px;
 }
 
+.list li p {
+    width: 100%;
+}
+.list li button {
+    width: 10%;
+    border: none;
+    /* border-radius: 10%; */
+}
+
+.list li button:hover {
+    color: white;
+    background-color: brown;
+    cursor: pointer;
+}
 .checked {
     text-decoration: line-through;
+    background-color: rgb(88, 87, 87);
+
 }
